--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.4.1",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
@@ -72,7 +73,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "react-app-rewired build",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -94,7 +95,9 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.1.1"
+    "customize-cra": "^1.0.0",
+    "file-loader": "^6.1.1",
+    "react-app-rewired": "^2.1.8"
   },
   "jest": {
     "roots": [
