--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "crypto-js": "^4.0.0",
-    "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -41,7 +40,6 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -59,9 +57,7 @@
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.0.5",
     "semver": "7.3.2",
-    "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
@@ -95,9 +91,14 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^4.3.0",
     "customize-cra": "^1.0.0",
     "file-loader": "^6.1.1",
-    "react-app-rewired": "^2.1.8"
+    "mini-css-extract-plugin": "^0.11.3",
+    "node-sass": "^6.0.0",
+    "react-app-rewired": "^2.1.8",
+    "sass-loader": "^10.2.0",
+    "style-loader": "^1.3.0"
   },
   "jest": {
     "roots": [
